# AI_code

./: .gitignore  README.md  pyproject.toml
data/average_temperature/: daily_KP_MEANHKHI_ALL.csv  daily_KP_MEANHKHI_ALL_2014_2025.csv
data/first/: Building_X_1st.csv
data/raw-data/: Building_X.csv  test.csv
data/second/: Building_X_2nd.csv
preprocess/: Building_X_2nd.csv  Building_X_2nd_with_temperature.csv  add_temperature.py  preprocess.ipynb  test_with_temperature.csv
result/: predicted_power_loads.csv
result/first/: chiller_lstm_model_first.pth  predicted_power_loads.csv  predicted_power_loads_nrmse.csv  scaler_X_first.pkl  scaler_y_first.pkl
result/raw/: chiller_lstm_model.pth
result/second/: chiller_lstm_model_second.pth  predicted_power_loads_2nd.csv  scaler_X_second.pkl  scaler_y_second.pkl
src/: chiller_lstm_model_second_add_temperature.pth  chiller_lstm_model_second_add_temperature_add_weight.pth  chiller_lstm_model_second_add_temperature_epoch100.pth  ipynb_to_py.py  lstm.ipynb  lstm.py  predicted_power_loads_2nd_add_temperature.csv  predicted_power_loads_2nd_add_temperature_add_weight.csv  predicted_power_loads_2nd_add_temperature_add_weight_2.csv  scaler_X_second_add_temperature.pkl  scaler_X_second_add_temperature_add_weight.pkl  scaler_y_second_add_temperature_add_weight.pkl  test_lstm.ipynb  test_lstm.py
src/.ipynb_checkpoints/: lstm-checkpoint.ipynb
